[gd_scene load_steps=13 format=3 uid="uid://dhniqyttriecf"]

[ext_resource type="Script" path="res://item_spawn.gd" id="1_o3hm0"]
[ext_resource type="Script" path="res://playerscript.gd" id="1_x517i"]
[ext_resource type="PackedScene" uid="uid://cv7s5fxeo4roe" path="res://pause_menu.tscn" id="3_41rsf"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j37na"]
albedo_color = Color(0, 1, 0.114498, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6h6wb"]
albedo_color = Color(0.776638, 0.28295, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k3i4q"]
albedo_color = Color(1, 0.146147, 0.205884, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5f2ng"]
albedo_color = Color(0.288566, 0.241825, 1, 1)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_guog7"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_n77jo"]
sky_material = SubResource("ProceduralSkyMaterial_guog7")

[sub_resource type="Environment" id="Environment_c51tg"]
background_mode = 2
sky = SubResource("Sky_n77jo")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="CapsuleMesh" id="CapsuleMesh_hltpp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6drjx"]

[node name="World" type="Node3D"]

[node name="items" type="Node3D" parent="." groups=["junk"]]
script = ExtResource("1_o3hm0")

[node name="Map" type="Node3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="Map"]
transform = Transform3D(42.6895, 0, 0, 0, 0.195144, 0, 0, 0, 47.5109, 0, 0, 0)
use_collision = true
collision_mask = 5
material = SubResource("StandardMaterial3D_j37na")

[node name="CSGBox3D3" type="CSGBox3D" parent="Map"]
transform = Transform3D(3.92643, 0, 0, 0, 2.39465, 0, 0, 0, 3.95023, 12.8645, 1.21931, 0)
use_collision = true
material = SubResource("StandardMaterial3D_6h6wb")

[node name="CSGBox3D2" type="CSGBox3D" parent="Map"]
transform = Transform3D(4.14282, 0, 0, 0, 3.47106, 0, 0, 0, 4.67166, 12.799, 1.80462, -4.26084)
use_collision = true
material = SubResource("StandardMaterial3D_k3i4q")

[node name="CSGBox3D4" type="CSGBox3D" parent="Map"]
transform = Transform3D(3.36528, 0, 0, 0, 1.24044, 0, 0, 0, 3.11674, 12.8416, 0.677777, 3.52534)
use_collision = true
size = Vector3(1.15527, 1, 1)
material = SubResource("StandardMaterial3D_5f2ng")

[node name="CSGBox3D5" type="CSGBox3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 3.53396, -2.73002, 1.76119, -0.210743)
use_collision = true

[node name="lighting" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="lighting"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="lighting"]
environment = SubResource("Environment_c51tg")

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.726969, 0)
collision_layer = 2
script = ExtResource("1_x517i")

[node name="body" type="MeshInstance3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_hltpp")

[node name="body_collision" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_6drjx")

[node name="head" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.61976, 0)

[node name="drop_position" type="Node3D" parent="Player/head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5)

[node name="Camera3D" type="Camera3D" parent="Player/head"]

[node name="raycast_pickup" type="RayCast3D" parent="Player/head/Camera3D"]
target_position = Vector3(0, 0, -3)
collision_mask = 5

[node name="hands" type="Node3D" parent="Player/head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.494033, -1.47155)

[node name="PauseMenu" parent="Player" instance=ExtResource("3_41rsf")]
